Fixed wrong colors

--- a/admin-panel/src/styles.css
+++ b/admin-panel/src/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
 .first-color { 
-	background: #285659; 
+	background: #f6f9f6; 
 }
 	
 .second-color { 
